<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_activity_doctor_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/home_activity_doctor_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/rounded_background_profile_picture"
            android:contentDescription="@string/doctor_picture"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/default_profile_picture" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/home_activity_doctor_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/home_activity_doctor_picture"
            app:layout_constraintTop_toTopOf="@id/home_activity_doctor_picture">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/welcome_back"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/home_activity_doctor_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Dra. Patricia Fernandez" />

            <TextView
                android:id="@+id/home_activity_doctor_appointments_counter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="Appointments today: 12" />

            <TextView
                android:id="@+id/home_activity_doctor_next_appointment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="Next appointment: 09:30 AM" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/home_activity_edit_doctor_info"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/edit"
            android:src="@drawable/edit_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/home_activity_main_category_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_activity_doctor_info_layout">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/home_activity_appointments_scheduling_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:background="@drawable/home_activity_main_category_background"
                android:contentDescription="@string/appointments_scheduling"
                android:padding="6dp"
                android:scaleType="centerCrop"
                android:src="@drawable/card_appointment_scheduling" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/appointments_scheduling_two_lines"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/home_activity_patients_records_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:background="@drawable/home_activity_main_category_background"
                android:contentDescription="@string/patients_records"
                android:padding="6dp"
                android:scaleType="centerCrop"
                android:src="@drawable/card_patients_records" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/patients_records_two_lines"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/home_activity_appointment_history_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:background="@drawable/home_activity_main_category_background"
                android:contentDescription="@string/appointment_history"
                android:padding="6dp"
                android:scaleType="centerCrop"
                android:src="@drawable/card_appointment_history" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/appointment_history_two_lines"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/home_activity_upcoming_appointments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/upcoming_appointments"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_activity_main_category_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_activity_upcoming_appointments_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_activity_upcoming_appointments" />
</androidx.constraintlayout.widget.ConstraintLayout>